=============================== 
IvyAddons 6010000 Release Notes 
===============================

* Issue 25766: Filemanager / File Links: translated dir names are not displayed correctly in info bar
* Issue 25767: Filemanager Filelinks: Filelinks are wrong listed in show recursive mode. 
This bug occurs if the Security and the Directory translation are activated. 
The filelinks located in the selected folder are not displayed if the path contains some translated directories in recursive mode.

=============================== 
IvyAddons 5010800 Release Notes 
===============================

* Issue 25687: Upgrade the Aspose libraries to the following versions:
aspose.slides-15.6.0
aspose-cells-8.5.1
aspose-pdf-10.6.1
aspose-words-15.7.0-jdk16

=============================== 
IvyAddons 5010600 Release Notes 
===============================

* Issue 25423: Bug fix. Filemanager: file tags are not deleted if related file is removed.
The result of this bug is that some tags remain in the db without reference to any existing file. No user can see the bug but your database contains some unnecessary data.
Workaround to manually clean the db (DISCLAIMER: PLEASE ALWAYS DO A DB BACKUP BEFORE USING SUCH A QUERY):
delete from tags t where not exists (select * from uploadedfiles f where f.fileid = t.fileid);

* Issue 25439: Improvement. HTML FileManager API in IvyAddons: HtmlFileManagerThumbnailer createFullSizeImages method should create temp images only.
* Issue 25440: Improvement. Filemanager: when displayed recursively the selected document displays its path in the filemanager info.
If the Directory Translation feature is activated, the path is displayed with the translated directories names.

* Issue 25558: new feature FileLinks. There is the possibility to create some fileLinks with the API. A FileLink links to an existing document or version.