@@ -1,0 +1,6 @@
+<P>
+Les fichiers suivants existent déjà et vous n'avez pas l'autorisation de les remplacer. Ils ne seront pas transférés :[NAME]
+</P>
+<P>
+Veuillez modifier leur nom sur votre ordinateur et transférez-les à nouveau.
+</P>
